--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,19 @@
             <version>${cucumberVersion}</version>
         </dependency>
 
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-junit</artifactId>
+            <version>${cucumberVersion}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>io.cucumber</groupId>
+            <artifactId>cucumber-core</artifactId>
+            <version>${cucumberVersion}</version>
+        </dependency>
+
+
     </dependencies>
     <properties>
         <maven.compiler.source>20</maven.compiler.source>
